# Fintom8-E-invoice-MCP-server

./: .gitignore  API_DOCUMENTATION.md  DEPLOYMENT.md  LICENSE  PYPI_PROPOSAL.md  README.md  RELEASE_INSTRUCTIONS.md  app.yaml  main.py  pyproject.toml  requirements.txt  server.py  test_all_tools.py  test_converter.py  test_correction_real.py  test_correction_v2.py  test_real_conversion.py  test_validation_v1_real.py  test_validator_v2.py
pypi_dist/: README.md  pyproject.toml
pypi_dist/src/e_invoice_mcp.egg-info/: PKG-INFO  SOURCES.txt
pypi_dist/src/fintom8_mcp/: server.py
pypi_dist/src/fintom8_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/e_invoice_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/fintom8_mcp/: __init__.py  server.py
