[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "e-invoice-mcp"
version = "0.1.8"
authors = [{ name="Igor Nikolaienko", email="igor@fintom8.com" }]
description = "MCP Server for Fintom8 E-Invoicing services (Conversion, Validation, Correction)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastmcp",
    "httpx",
]

[project.urls]
Homepage = "https://github.com/NikolaienkoIgor/Fintom8-E-invoice-MCP-server"
Issues = "https://github.com/NikolaienkoIgor/Fintom8-E-invoice-MCP-server/issues"

[project.scripts]
e-invoice-mcp = "fintom8_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
